Fix overflowing text in dropdowns (#2269)

--- a/src/stylesheets/Components/filter-pill.styl
+++ b/src/stylesheets/Components/filter-pill.styl
@@ -24,6 +24,7 @@
 .search__select
   transition: width .1s ease-in-out
   padding: 5px 10px
+  padding-right: 25px;
   min-width: 60px
   max-width: 200px
   color: $colors.white
